--- a/SwiftFixedRefreshControlDemo/Base.lproj/Main.storyboard
+++ b/SwiftFixedRefreshControlDemo/Base.lproj/Main.storyboard
@@ -9,10 +9,10 @@
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
-        <!--Interface Refresh ControlVC-->
+        <!--Interface Builder RefreshVC-->
         <scene sceneID="ZGh-qQ-3wX">
             <objects>
-                <tableViewController storyboardIdentifier="InterfaceRefreshControlVC" id="BrJ-Vl-R20" customClass="InterfaceRefreshControlVC" customModule="SwiftFixedRefreshControlDemo" customModuleProvider="target" sceneMemberID="viewController">
+                <tableViewController storyboardIdentifier="InterfaceBuilderRefreshVC" id="BrJ-Vl-R20" customClass="InterfaceBuilderRefreshVC" customModule="SwiftFixedRefreshControlDemo" customModuleProvider="target" sceneMemberID="viewController">
                     <tableView key="view" clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="grouped" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="18" sectionFooterHeight="18" id="iIK-az-gcV">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
@@ -33,6 +33,7 @@
                         </connections>
                     </tableView>
                     <refreshControl key="refreshControl" opaque="NO" multipleTouchEnabled="YES" contentMode="center" insetsLayoutMarginsFromSafeArea="NO" enabled="NO" contentHorizontalAlignment="center" contentVerticalAlignment="center" id="h83-Ub-koA">
+                        <rect key="frame" x="0.0" y="0.0" width="1000" height="1000"/>
                         <autoresizingMask key="autoresizingMask"/>
                     </refreshControl>
                 </tableViewController>
